fixed overflow issues

--- a/app/globals.css
+++ b/app/globals.css
@@ -19,3 +19,8 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+body, html {
+  max-width: 100%;
+  overflow-x: hidden;
+}
